RESOLVED FIXED15282
r25726 caused plugins/mouse-events.html to fail
https://bugs.webkit.org/show_bug.cgi?id=15282
Summary r25726 caused plugins/mouse-events.html to fail
Beth Dakin
Reported 2007-09-25 15:47:04 PDT
The fix for http://bugs.webkit.org/show_bug.cgi?id=15241 caused a layout test failure.
Attachments
Call updateWidgetPositions() as Mitz suggested (1.08 KB, patch)
2007-09-25 15:50 PDT, Beth Dakin
no flags
No s! (1.73 KB, patch)
2007-09-25 15:58 PDT, Beth Dakin
darin: review+
Beth Dakin
Comment 1 2007-09-25 15:50:13 PDT
Created attachment 16392 [details] Call updateWidgetPositions() as Mitz suggested
mitz
Comment 2 2007-09-25 15:54:38 PDT
Comment on attachment 16392 [details] Call updateWidgetPositions() as Mitz suggested Actually I thought about calling updateWidgetPosition() (no s!) on (*it), so it would be called only on the newly created widgets.
Beth Dakin
Comment 3 2007-09-25 15:58:10 PDT
Created attachment 16393 [details] No s! That seems better.
Darin Adler
Comment 4 2007-09-25 15:59:27 PDT
Comment on attachment 16393 [details] No s! r=me
Beth Dakin
Comment 5 2007-09-25 16:02:02 PDT
Fixed with r25739.
Note You need to log in before you can comment on or make changes to this bug.