        Reviewed by Darin.

Fixes http://bugs.webkit.org/show_bug.cgi?id=15282 r25726 caused
        plugins/mouse-events.html to fail

        * page/FrameView.cpp:
        (WebCore::FrameView::layout): We need to call
        updateWidgetPosition() after updating each widget.



Canonical link: https://commits.webkit.org/20188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25739 268f45cc-cd09-0410-ab3c-d52691b4dbfc